[gd_scene load_steps=27 format=3 uid="uid://dwr26vpu071bh"]

[ext_resource type="Script" path="res://Scenes/Components/ability_upgrade_card.gd" id="1_nd5wj"]
[ext_resource type="PackedScene" uid="uid://cf75jp2g8ipn3" path="res://Scenes/Components/random_stream_player_component.tscn" id="2_lr4sn"]
[ext_resource type="AudioStream" uid="uid://daf7m15b60rxs" path="res://Assets/Sounds/rollover1.ogg" id="3_vqhqb"]
[ext_resource type="AudioStream" uid="uid://d33x835q2sqrk" path="res://Assets/Sounds/rollover2.ogg" id="4_hjf65"]
[ext_resource type="AudioStream" uid="uid://c53swy6nl2wih" path="res://Assets/Sounds/rollover3.ogg" id="5_odxjb"]
[ext_resource type="AudioStream" uid="uid://dpihyonuvpsoe" path="res://Assets/Sounds/rollover4.ogg" id="6_7cna3"]
[ext_resource type="AudioStream" uid="uid://dr0g8v8uy1uyq" path="res://Assets/Sounds/rollover5.ogg" id="7_0eanf"]
[ext_resource type="AudioStream" uid="uid://cxndhjo881crr" path="res://Assets/Sounds/rollover6.ogg" id="8_e3a36"]
[ext_resource type="AudioStream" uid="uid://dv6425xvmwo3q" path="res://Assets/Sounds/switch1.ogg" id="9_iltsj"]
[ext_resource type="AudioStream" uid="uid://dakqreg8hbybp" path="res://Assets/Sounds/switch2.ogg" id="10_2u7h2"]
[ext_resource type="AudioStream" uid="uid://5727od2giglg" path="res://Assets/Sounds/switch3.ogg" id="11_cygn4"]
[ext_resource type="AudioStream" uid="uid://bs7r7hflct0e3" path="res://Assets/Sounds/switch4.ogg" id="12_r1q1t"]
[ext_resource type="AudioStream" uid="uid://00achd5nb71j" path="res://Assets/Sounds/switch5.ogg" id="13_be510"]
[ext_resource type="AudioStream" uid="uid://cfa3dy6p65ub7" path="res://Assets/Sounds/switch6.ogg" id="14_6cen7"]
[ext_resource type="AudioStream" uid="uid://bo6k0q81ri08j" path="res://Assets/Sounds/switch7.ogg" id="15_htw81"]
[ext_resource type="AudioStream" uid="uid://c3lmcmfdbm58l" path="res://Assets/Sounds/switch8.ogg" id="16_thpf4"]
[ext_resource type="AudioStream" uid="uid://crnelwvo5343r" path="res://Assets/Sounds/switch9.ogg" id="17_8ndbr"]
[ext_resource type="AudioStream" uid="uid://d1msqe27tl7js" path="res://Assets/Sounds/switch10.ogg" id="18_gfw48"]

[sub_resource type="Animation" id="Animation_nkpxj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s5k78"]
resource_name = "discard"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(3.24901, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.00136e-05, 1.00136e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.174533, 0.261799, 0.349066, 0.436332, 0.523599, 0.698132, 0.785398]
}

[sub_resource type="Animation" id="Animation_sh2ef"]
resource_name = "in"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.0251, 0.275),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.25, 1.25), Vector2(1.25, 1.25), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6pdb8"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.35),
"transitions": PackedFloat32Array(1, 1, 0.116629),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.25, 1.25), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frflx"]
_data = {
"RESET": SubResource("Animation_nkpxj"),
"discard": SubResource("Animation_s5k78"),
"in": SubResource("Animation_sh2ef"),
"selected": SubResource("Animation_6pdb8")
}

[sub_resource type="Animation" id="Animation_jkekv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_i320y"]
resource_name = "hover"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epsnt"]
_data = {
"RESET": SubResource("Animation_jkekv"),
"hover": SubResource("Animation_i320y")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_cards"]]
custom_minimum_size = Vector2(120, 150)
offset_right = 173.0
offset_bottom = 150.0
pivot_offset = Vector2(86, 75)
script = ExtResource("1_nd5wj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_frflx")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_epsnt")
}

[node name="RolloverStreamPlayer" parent="." instance=ExtResource("2_lr4sn")]
volume_db = -7.5
streams = Array[AudioStream]([ExtResource("3_vqhqb"), ExtResource("4_hjf65"), ExtResource("5_odxjb"), ExtResource("6_7cna3"), ExtResource("7_0eanf"), ExtResource("8_e3a36")])

[node name="ClickStreamPlayer" parent="." instance=ExtResource("2_lr4sn")]
streams = Array[AudioStream]([ExtResource("9_iltsj"), ExtResource("10_2u7h2"), ExtResource("11_cygn4"), ExtResource("12_r1q1t"), ExtResource("13_be510"), ExtResource("14_6cen7"), ExtResource("15_htw81"), ExtResource("16_thpf4"), ExtResource("17_8ndbr"), ExtResource("18_gfw48")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Test Name
"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 16
text = "Some description of ability here.
"
autowrap_mode = 3
